# phidata_youtube_summarizer

./: README.md  pyproject.toml
src/: app.py  assistant.py
src/phidata_youtube_summarizer/: __init__.py
